--- a/css/style.css
+++ b/css/style.css
@@ -185,14 +185,13 @@ img {
   overflow: hidden;
 }
 .swiper-container .swiper-slide .arrows-box {
-  width: 29px;
-  height: 35px;
+  width: 7.4%;
   position: absolute;
   bottom: 10px;
   left: 50%;
   z-index: 2;
   display: inline-block;
-  margin-left: -6px;
+  margin-left: -3.7%;
   color: #fff;
   font: normal 400 20px/1 'Josefin Sans', sans-serif;
   text-decoration: none;
@@ -726,6 +725,96 @@ img {
   right: 10%;
   top: 80%;
   margin-bottom: 6%;
+}
+.page-six {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+.page-six .six-a {
+  width: 68.2%;
+  position: absolute;
+  left: 50%;
+  margin-left: -34.1%;
+  top: 4%;
+}
+.page-six .six-b {
+  width: 20.8%;
+  position: absolute;
+  left: 13%;
+  top: 12%;
+}
+.page-six .six-c {
+  width: 28%;
+  position: absolute;
+  right: 22%;
+  top: 11%;
+}
+.page-six .six-d {
+  width: 28%;
+  position: absolute;
+  left: 6%;
+  top: 22%;
+}
+.page-six .six-e {
+  width: 26.1%;
+  position: absolute;
+  right: 3%;
+  top: 18%;
+}
+.page-six .six-f {
+  width: 35.4%;
+  position: absolute;
+  right: 0%;
+  top: 24%;
+}
+.page-six .six-g {
+  width: 24.1%;
+  position: absolute;
+  left: 5%;
+  top: 29%;
+}
+.page-six .six-h {
+  width: 46.6%;
+  position: absolute;
+  left: 50%;
+  top: 20%;
+  margin-left: -23.3%;
+  z-index: 23;
+}
+.page-six .txt-box {
+  width: 100%;
+  height: auto;
+  background-image: url('../images/bg_tex.png');
+  background-repeat: no-repeat;
+  background-position: center 0;
+  background-size: 90%;
+  position: relative;
+  margin-top: 72%;
+  box-sizing: border-box;
+  min-height: 261px;
+  text-align: center;
+  z-index: 22;
+  overflow: hidden;
+}
+.page-six .txt-box .three-i {
+  width: 70.9%;
+  margin-top: 24%;
+}
+.page-six .six-i {
+  width: 28%;
+  position: absolute;
+  left: 1.5%;
+  bottom: 3%;
+  z-index: 23;
+}
+.page-six .six-j {
+  width: 17.45%;
+  position: absolute;
+  right: 7%;
+  bottom: 1%;
+  z-index: 23;
 }
 .join-btn {
   width: 56.5%;
