--- a/css/style.less
+++ b/css/style.less
@@ -205,14 +205,14 @@ img {
         position: relative;
         overflow: hidden;
         .arrows-box {
-            width: 29px;
-            height: 35px;
+            width: 7.4%;
+          
             position: absolute;
             bottom: 10px;
             left: 50%;
             z-index: 2;
             display: inline-block;
-            margin-left: -6px;
+            margin-left: -3.7%;
             color: #fff;
             font: normal 400 20px/1 'Josefin Sans', sans-serif;
             text-decoration: none;
@@ -762,7 +762,98 @@ img {
         }
     }
 }
-
+.page-six{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+    .six-a{
+       width: 68.2%;
+        position: absolute;
+        left: 50%;
+        margin-left: -34.1%;
+        top: 4%; 
+    }
+    .six-b{
+        width: 20.8%;
+        position: absolute;
+        left: 13%;
+        top: 12%; 
+    }
+    .six-c{
+         width: 28%;
+        position: absolute;
+        right: 22%;
+        top: 11%; 
+    }
+    .six-d{
+         width: 28%;
+        position: absolute;
+        left: 6%;
+        top: 22%; 
+    }
+    .six-e{
+         width: 26.1%;
+        position: absolute;
+        right: 3%;
+        top: 18%; 
+    }
+    .six-f{
+        width: 35.4%;
+        position: absolute;
+        right: 0%;
+        top: 24%;  
+    }
+    .six-g{
+        width: 24.1%;
+        position: absolute;
+        left: 5%;
+        top: 29%;
+    }
+    .six-h{
+         width: 46.6%;
+        position: absolute;
+        left: 50%;
+        top: 20%;
+        margin-left: -23.3%;
+        z-index: 23;
+    }
+    .txt-box {
+        width: 100%;
+        height: auto;
+        background-image: url('../images/bg_tex.png');
+        background-repeat: no-repeat;
+        background-position: center 0;
+        background-size: 90%;
+        position: relative;
+        margin-top: 72%;
+        box-sizing: border-box;
+        min-height: 261px;
+        text-align: center;
+        z-index: 22;
+        overflow: hidden;
+        .three-i {
+            width: 70.9%;
+            margin-top: 24%;
+        }
+       
+    }
+    .six-i{
+         width: 28%;
+        position: absolute;
+        left:1.5%;
+        bottom: 3%;
+        z-index: 23;
+      
+    }
+    .six-j{
+        width: 17.45%;
+        position: absolute;
+        right:7%;
+        bottom: 1%;
+        z-index: 23; 
+    }
+}
 .join-btn {
     width: 56.5%;
     margin: 6% auto 10% auto;
