--- a/css/style.less
+++ b/css/style.less
@@ -854,6 +854,110 @@ img {
         z-index: 23; 
     }
 }
+.page-seven{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+    .seven-a{
+        width: 12%;
+        position: absolute;
+        left: 16%;
+        top: 3%;
+    }
+    .seven-b{
+        width: 34%;
+        position: absolute;
+        right: 16%;
+        top: 0%; 
+
+    }
+    .seven-c{
+        width: 8.5%;
+        position: absolute;
+        right: 9%;
+        top: 5%;
+    }
+    .seven-d{
+       width: 11%;
+        position: absolute;
+        left: 10%;
+        top: 12%;        
+    }
+    .seven-e{
+        width: 9%;
+        position: absolute;
+        left: 29%;
+        top: 13%; 
+    }
+    .seven-f{
+        width: 11%;
+        position: absolute;
+         right: 9%;
+        top: 14%; 
+    }
+    .seven-g{
+        width: 33.4%;
+        position: absolute;
+        left: 0%;
+        top: 22%;  
+    }
+    .seven-h{
+         width: 35%;
+        position: absolute;
+         right: 0%;
+        top: 20%; 
+    }
+    .seven-i{
+         width: 46%;
+        position: absolute;
+        left: 50%;
+        top: 17%;
+        margin-left: -23%;
+        z-index: 23;
+    }
+    .txt-box {
+        width: 100%;
+        height: auto;
+        background-image: url('../images/bg_tex.png');
+        background-repeat: no-repeat;
+        background-position: center 0;
+        background-size: 90%;
+        position: relative;
+        margin-top: 62%;
+        box-sizing: border-box;
+        min-height: 261px;
+        text-align: center;
+        z-index: 22;
+        overflow: hidden;
+        .three-i {
+            width: 79.7%;
+            margin-top: 24%;
+        }
+       
+    }
+    .seven-j{
+        width: 21%;
+        position: absolute;
+        left: 8%;
+       bottom: 3%;
+        z-index: 23;
+    }
+    .seven-K{
+        width: 22%;
+        position: absolute;
+        right: 8%;
+       bottom: 3%;
+        z-index: 23;
+    }
+}
+
+.page-eight{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+}
 .join-btn {
     width: 56.5%;
     margin: 6% auto 10% auto;
