--- a/css/style.css
+++ b/css/style.css
@@ -907,7 +907,7 @@ img {
 .page-seven .seven-K {
   width: 22%;
   position: absolute;
-  right: 8%;
+  right: 2%;
   bottom: 1%;
   z-index: 23;
 }
@@ -916,6 +916,150 @@ img {
   height: 100%;
   position: relative;
   overflow: hidden;
+}
+.page-eight .eight-a {
+  width: 22%;
+  position: absolute;
+  left: 10%;
+  top: 5%;
+}
+.page-eight .eight-b {
+  width: 32%;
+  position: absolute;
+  right: 16%;
+  top: 3%;
+}
+.page-eight .eight-c {
+  width: 22%;
+  position: absolute;
+  right: 12%;
+  top: 14%;
+}
+.page-eight .eight-d {
+  width: 35%;
+  position: absolute;
+  left: 0%;
+  top: 19%;
+}
+.page-eight .eight-e {
+  width: 35%;
+  position: absolute;
+  right: 0%;
+  top: 24%;
+}
+.page-eight .eight-f {
+  width: 46%;
+  position: absolute;
+  left: 50%;
+  top: 20%;
+  margin-left: -23%;
+  z-index: 23;
+}
+.page-eight .eight-g {
+  width: 37%;
+  position: absolute;
+  left: 8%;
+  bottom: 2%;
+  z-index: 23;
+}
+.page-eight .eight-h {
+  width: 31%;
+  position: absolute;
+  right: 10%;
+  bottom: 2%;
+  z-index: 23;
+}
+.page-eight .txt-box {
+  width: 100%;
+  height: auto;
+  background-image: url('../images/bg_tex.png');
+  background-repeat: no-repeat;
+  background-position: center 0;
+  background-size: 90%;
+  position: relative;
+  margin-top: 72%;
+  box-sizing: border-box;
+  min-height: 261px;
+  text-align: center;
+  z-index: 22;
+  overflow: hidden;
+}
+.page-eight .txt-box .three-i {
+  width: 79.7%;
+  margin-top: 24%;
+}
+.join-boxaa {
+  width: 100%;
+  max-width: 750px;
+  height: 100%;
+  position: relative;
+  margin: auto;
+  background-image: url('../images/joinbg.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: hidden;
+}
+.join-boxaa .box-insider {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  position: relative;
+}
+.join-boxaa .box-insider .pic_a {
+  width: 30.6%;
+  margin: auto;
+  position: absolute;
+  top: 32.2%;
+  left: 50%;
+  margin-left: -15.3%;
+}
+.join-boxaa .box-insider .pic_a img {
+  width: 100%;
+}
+.join-boxaa .box-insider .pic_b {
+  width: 8.2%;
+  position: absolute;
+  top: 38.2%;
+  left: 50%;
+  margin-left: -4.1%;
+}
+.join-boxaa .box-insider .pic_c {
+  width: 78.5%;
+  position: absolute;
+  left: 50%;
+  margin-left: -39.2%;
+  top: 31%;
+  -webkit-animation: snowa 1s infinite;
+  animation: snowa 1s infinite;
+}
+.join-boxaa .box-insider .pic_d {
+  display: block;
+  width: 60.9%;
+  z-index: 24;
+  position: absolute;
+  left: 50%;
+  margin-left: -30.4%;
+  top: 46%;
+}
+.join-boxaa .box-insider .pic_d img {
+  width: 100%;
+}
+.join-boxaa .box-insider .pic_e {
+  width: 38.1%;
+  position: absolute;
+  left: 50%;
+  margin-left: -19%;
+  top: 54%;
+}
+.join-boxaa .backbox {
+  display: inline-block;
+  text-align: center;
+  position: absolute;
+  bottom: 5%;
+  width: 100%;
+}
+.join-boxaa .backbox img {
+  width: 35.7%;
 }
 .join-btn {
   width: 56.5%;
@@ -937,6 +1081,22 @@ img {
   z-index: 222;
   -webkit-animation: Zoompic 1s infinite;
   animation: Zoompic 1s infinite;
+}
+@keyframes snowa {
+  0% {
+    background-position: 0 0, 0 0;
+  }
+  100% {
+    background-position: 500px 1000px, 500px 500px;
+  }
+}
+@-webkit-keyframes snowa {
+  0% {
+    background-position: 0 0, 0 0;
+  }
+  100% {
+    background-position: 500px 1000px, 500px 500px;
+  }
 }
 @-webkit-keyframes sdb05 {
   0% {
