--- a/css/style.less
+++ b/css/style.less
@@ -45,7 +45,7 @@ img {
         width: 100%;
         background-image: url('../images/page_one_d.png');
         background-repeat: no-repeat;
-        background-size: 90%;
+        background-size: 86%;
         background-position: right 10px;
         text-align: center;
         height: 40%;
@@ -54,8 +54,8 @@ img {
         left: 0;
         z-index: 100;
         .home-jionus {
-            max-width: 83%;
-            margin-top: 32px;
+            max-width: 79%;
+            margin-top: 27px;
             -webkit-animation: Zoompic 1s infinite;
             animation: Zoompic 1s infinite;
         }
@@ -65,7 +65,7 @@ img {
         height: 52%;
 
         position: absolute;
-        top: 25%;
+        top: 23%;
         left: 0;
 
         z-index: 99;
@@ -110,8 +110,12 @@ img {
         height: 27%;
         background-size: 100%;
         .btn-groub {
-            margin-top: 14%;
-            text-align: center;
+                position: absolute;
+    margin-top: 14%;
+    text-align: center;
+    top: 5%;
+    left: 50%;
+    margin-left: -38%;
             a {
                 display: inline-block;
                 margin: 0 5px;
