--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ img {
   width: 100%;
   background-image: url('../images/page_one_d.png');
   background-repeat: no-repeat;
-  background-size: 90%;
+  background-size: 86%;
   background-position: right 10px;
   text-align: center;
   height: 40%;
@@ -50,8 +50,8 @@ img {
   z-index: 100;
 }
 .home-box .one-titbox .home-jionus {
-  max-width: 83%;
-  margin-top: 32px;
+  max-width: 79%;
+  margin-top: 27px;
   -webkit-animation: Zoompic 1s infinite;
   animation: Zoompic 1s infinite;
 }
@@ -59,7 +59,7 @@ img {
   width: 100%;
   height: 52%;
   position: absolute;
-  top: 25%;
+  top: 23%;
   left: 0;
   z-index: 99;
 }
@@ -102,8 +102,12 @@ img {
   background-size: 100%;
 }
 .home-box .btn-box .btn-groub {
+  position: absolute;
   margin-top: 14%;
   text-align: center;
+  top: 5%;
+  left: 50%;
+  margin-left: -38%;
 }
 .home-box .btn-box .btn-groub a {
   display: inline-block;
