--- a/css/style.less
+++ b/css/style.less
@@ -107,13 +107,15 @@ img {
         bottom: 0;
         background-image: url('../images/page_one_b.png');
         background-position: 0 bottom;
-        height: 27%;
+        background-repeat: no-repeat;
+        height: 30%;
         background-size: 100%;
+        z-index: 200;
         .btn-groub {
                 position: absolute;
-    margin-top: 14%;
+  
     text-align: center;
-    top: 5%;
+    top: 45%;
     left: 50%;
     margin-left: -38%;
             a {
