--- a/css/style.less
+++ b/css/style.less
@@ -655,14 +655,15 @@ img {
         width: 20%;
         position: absolute;
         left: 8%;
-        bottom: 3%;
+        bottom: 2%;
         z-index: 23;
     }
     .four-j {
         width: 48.5%;
         position: absolute;
         right: 7%;
-        bottom: 4%;
+        bottom: 2%;
+          z-index: 23;
     }
 }
 
