--- a/css/style.css
+++ b/css/style.css
@@ -211,17 +211,16 @@ img {
 .page-one {
   height: 90%;
   width: 82%;
-  margin: 10% auto;
+  margin: 4% auto;
   box-sizing: border-box;
 }
 .page-one .activ-one {
   width: 100%;
   text-align: center;
   float: left;
-  margin-bottom: 5%;
 }
 .page-one .activ-one img {
-  width: 90%;
+  width: 84%;
 }
 .page-one .one-box {
   width: 100%;
@@ -340,31 +339,33 @@ img {
   width: 100%;
   height: 100%;
   position: relative;
+  overflow: hidden;
 }
 .page-two .two-a {
-  width: 35.6%;
-  display: inline-block;
-  margin: 20px auto auto 30px;
+  width: 34%;
+  position: absolute;
+  left: 10%;
+  top: 3%;
 }
 .page-two .two-a img {
   width: 100%;
 }
 .page-two .two-b {
   width: 16.6%;
-  display: inline-block;
-  vertical-align: top;
-  margin: 46px auto auto 48px;
+  position: absolute;
+  left: 60%;
+  top: 3%;
 }
 .page-two .two-b img {
   width: 100%;
 }
 .page-two .two-c {
-  width: 19.4%;
+  width: 19%;
   display: inline-block;
   vertical-align: top;
   position: absolute;
   right: 7%;
-  top: 18%;
+  top: 14%;
 }
 .page-two .two-c img {
   width: 100%;
@@ -375,18 +376,18 @@ img {
   vertical-align: top;
   position: absolute;
   right: 0%;
-  top: 25%;
+  top: 20%;
 }
 .page-two .two-d img {
   width: 100%;
 }
 .page-two .two-e {
-  width: 32.9%;
+  width: 32%;
   display: inline-block;
   vertical-align: top;
   position: absolute;
   left: 0%;
-  top: 25%;
+  top: 21%;
 }
 .page-two .two-e img {
   width: 100%;
@@ -395,7 +396,7 @@ img {
   width: 48.6%;
   position: absolute;
   z-index: 111;
-  top: 22%;
+  top: 18%;
   left: 50%;
   margin-left: -24.3%;
 }
@@ -407,10 +408,10 @@ img {
   background-position: center 0;
   background-size: 90%;
   position: relative;
-  margin-top: 40%;
+  margin-top: 64%;
   box-sizing: border-box;
   overflow: hidden;
-  min-height: 261px;
+  min-height: 340px;
   text-align: center;
 }
 .page-two .txt-box .two-g {
@@ -418,7 +419,7 @@ img {
   margin-top: 24%;
 }
 .page-two .two-h {
-  width: 30.5%;
+  width: 26%;
   position: absolute;
   bottom: -3px;
   left: 0;
@@ -451,16 +452,16 @@ img {
   width: 100%;
 }
 .page-three .three-b {
-  width: 23.7%;
+  width: 20%;
   position: absolute;
   left: 47.5%;
-  top: 6.4%;
+  top: 4.4%;
 }
 .page-three .three-b img {
   width: 100%;
 }
 .page-three .three-c {
-  width: 32%;
+  width: 30%;
   position: absolute;
   right: 1%;
   top: 10.7%;
@@ -478,7 +479,7 @@ img {
   width: 100%;
 }
 .page-three .three-e {
-  width: 34.6%;
+  width: 32%;
   position: absolute;
   left: 1%;
   top: 18.4%;
@@ -508,7 +509,7 @@ img {
   width: 48.6%;
   position: absolute;
   z-index: 111;
-  top: 22%;
+  top: 19.8%;
   left: 50%;
   margin-left: -24.3%;
 }
@@ -520,9 +521,9 @@ img {
   background-position: center 0;
   background-size: 90%;
   position: relative;
-  margin-top: 70%;
+  margin-top: 64%;
   box-sizing: border-box;
-  min-height: 261px;
+  min-height: 340px;
   text-align: center;
 }
 .page-three .txt-box .three-i {
@@ -530,16 +531,16 @@ img {
   margin-top: 24%;
 }
 .page-three .three-j {
-  width: 27.8%;
+  width: 24%;
   position: absolute;
-  bottom: 2%;
+  bottom: 0.1%;
   left: 2%;
 }
 .page-three .three_k {
-  width: 33.2%;
+  width: 30%;
   position: absolute;
   right: 3%;
-  bottom: 3%;
+  bottom: 0.1%;
 }
 .page-four {
   width: 100%;
@@ -550,51 +551,51 @@ img {
 .page-four .four-a {
   width: 40%;
   position: absolute;
-  top: 4%;
+  top: 3%;
   left: 50%;
   margin-left: -20%;
 }
 .page-four .four-b {
-  width: 33%;
+  width: 28%;
   position: absolute;
-  top: 11%;
+  top: 9%;
   left: 4.5%;
 }
 .page-four .four-c {
-  width: 26%;
+  width: 23%;
   position: absolute;
-  top: 12%;
-  right: 4.5%;
+  top: 73px;
+  right: 7.5%;
 }
 .page-four .four-d {
   width: 11%;
   position: absolute;
-  top: 18%;
+  top: 110px;
   left: 15.5%;
 }
 .page-four .four-e {
-  width: 34.2%;
+  width: 31%;
   position: absolute;
-  top: 17%;
+  top: 13%;
   left: 34%;
 }
 .page-four .four-f {
-  width: 21.3%;
+  width: 20%;
   position: absolute;
-  top: 23%;
-  left: 13%;
+  top: 150px;
+  left: 10%;
 }
 .page-four .four-g {
-  width: 33%;
+  width: 30%;
   position: absolute;
-  top: 22%;
+  top: 18%;
   right: 0%;
 }
 .page-four .four-h {
   width: 50.5%;
   position: absolute;
   left: 50%;
-  top: 22%;
+  top: 18%;
   margin-left: -25.15%;
   z-index: 23;
 }
@@ -606,25 +607,25 @@ img {
   background-position: center 0;
   background-size: 90%;
   position: relative;
-  margin-top: 68%;
+  margin-top: 64%;
   box-sizing: border-box;
-  min-height: 261px;
+  min-height: 340px;
   text-align: center;
   z-index: 22;
 }
 .page-four .txt-box .three-i {
   width: 65.6%;
-  margin-top: 24%;
+  margin-top: 23%;
 }
 .page-four .four-i {
-  width: 20%;
+  width: 18%;
   position: absolute;
   left: 8%;
   bottom: 2%;
   z-index: 23;
 }
 .page-four .four-j {
-  width: 48.5%;
+  width: 46%;
   position: absolute;
   right: 7%;
   bottom: 2%;
@@ -637,16 +638,16 @@ img {
   overflow: hidden;
 }
 .page-five .five-a {
-  width: 40%;
+  width: 36%;
   position: absolute;
   top: 3%;
   left: 50%;
   margin-left: -20%;
 }
 .page-five .five-b {
-  width: 25%;
+  width: 22%;
   position: absolute;
-  top: 9%;
+  top: 7%;
   left: 4%;
 }
 .page-five .five-c {
@@ -656,51 +657,45 @@ img {
   right: 6%;
 }
 .page-five .five-d {
-  width: 45.7%;
+  width: 43%;
   position: absolute;
-  top: 14%;
+  top: 12%;
   left: 25%;
 }
 .page-five .five-e {
   width: 11%;
   position: absolute;
-  top: 20%;
-  left: 13%;
-}
-.page-five .five-f {
-  width: 11%;
-  position: absolute;
-  top: 20%;
+  top: 17%;
   left: 13%;
 }
 .page-five .five-g {
-  width: 34%;
+  width: 30%;
   position: absolute;
   top: 20%;
   right: 2%;
 }
 .page-five .five-h {
-  width: 34%;
+  width: 29%;
   position: absolute;
-  top: 26%;
+  top: 23%;
   left: 6%;
 }
 .page-five .five-i {
-  width: 66%;
+  width: 66.6%;
   position: absolute;
   left: 50%;
-  top: 19%;
+  top: 16%;
   margin-left: -33%;
   z-index: 23;
 }
 .page-five .five-j {
-  width: 46.9%;
+  width: 43%;
   position: absolute;
   left: 5%;
   bottom: 2%;
 }
 .page-five .five-k {
-  width: 31.2%;
+  width: 26%;
   position: absolute;
   right: 5%;
   bottom: 0%;
@@ -714,22 +709,22 @@ img {
   background-position: center 0;
   background-size: 90%;
   position: relative;
-  margin-top: 66%;
+  margin-top: 64%;
   box-sizing: border-box;
-  min-height: 261px;
+  min-height: 340px;
   text-align: center;
   z-index: 22;
   overflow: hidden;
 }
 .page-five .txt-box .three-i {
   width: 68%;
-  margin-top: 24%;
+  margin-top: 23%;
 }
 .page-five .txt-box .three-j {
   width: 10.1%;
   position: absolute;
   right: 10%;
-  top: 80%;
+  top: 60%;
   margin-bottom: 6%;
 }
 .page-six {
@@ -797,26 +792,26 @@ img {
   background-position: center 0;
   background-size: 90%;
   position: relative;
-  margin-top: 64%;
+  margin-top: 62%;
   box-sizing: border-box;
-  min-height: 261px;
+  min-height: 340px;
   text-align: center;
   z-index: 22;
   overflow: hidden;
 }
 .page-six .txt-box .three-i {
   width: 70.9%;
-  margin-top: 24%;
+  margin-top: 23%;
 }
 .page-six .six-i {
-  width: 24%;
+  width: 22%;
   position: absolute;
   left: 1.5%;
-  bottom: 2%;
+  bottom: 1.6%;
   z-index: 23;
 }
 .page-six .six-j {
-  width: 13.45%;
+  width: 12%;
   position: absolute;
   right: 7%;
   bottom: 1%;
@@ -877,7 +872,7 @@ img {
   top: 20%;
 }
 .page-seven .seven-i {
-  width: 46%;
+  width: 46.6%;
   position: absolute;
   left: 50%;
   top: 17%;
@@ -892,29 +887,29 @@ img {
   background-position: center 0;
   background-size: 90%;
   position: relative;
-  margin-top: 62%;
+  margin-top: 64%;
   box-sizing: border-box;
-  min-height: 261px;
+  min-height: 340px;
   text-align: center;
   z-index: 22;
   overflow: hidden;
 }
 .page-seven .txt-box .three-i {
   width: 79.7%;
-  margin-top: 24%;
+  margin-top: 23%;
 }
 .page-seven .seven-j {
-  width: 21%;
+  width: 18%;
   position: absolute;
-  left: 8%;
-  bottom: 2%;
+  left: 7%;
+  bottom: 0.5%;
   z-index: 23;
 }
 .page-seven .seven-K {
-  width: 22%;
+  width: 18%;
   position: absolute;
   right: 2%;
-  bottom: 1%;
+  bottom: 0.1%;
   z-index: 23;
 }
 .page-eight {
@@ -954,7 +949,7 @@ img {
   top: 20%;
 }
 .page-eight .eight-f {
-  width: 46%;
+  width: 46.6666%;
   position: absolute;
   left: 50%;
   top: 15%;
@@ -962,17 +957,17 @@ img {
   z-index: 23;
 }
 .page-eight .eight-g {
-  width: 30%;
+  width: 28%;
   position: absolute;
   left: 3%;
-  bottom: 2%;
+  bottom: 1%;
   z-index: 23;
 }
 .page-eight .eight-h {
-  width: 28%;
+  width: 26%;
   position: absolute;
   right: 10%;
-  bottom: 2%;
+  bottom: 0.2%;
   z-index: 23;
 }
 .page-eight .txt-box {
@@ -985,14 +980,14 @@ img {
   position: relative;
   margin-top: 63%;
   box-sizing: border-box;
-  min-height: 261px;
+  min-height: 340px;
   text-align: center;
   z-index: 22;
   overflow: hidden;
 }
 .page-eight .txt-box .three-i {
   width: 79.7%;
-  margin-top: 24%;
+  margin-top: 23%;
 }
 .join-boxaa {
   width: 100%;
@@ -1000,7 +995,7 @@ img {
   height: 100%;
   position: relative;
   margin: auto;
-  background-image: url('../images/joinbg.png');
+  background-image: url('../images/webbg.png');
   background-size: cover;
   background-repeat: no-repeat;
   overflow: hidden;
@@ -1008,8 +1003,11 @@ img {
 .join-boxaa .box-insider {
   width: 100%;
   height: 100%;
+  background-image: url('../images/joinbg.png');
   text-align: center;
   position: relative;
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
 .join-boxaa .box-insider .pic_a {
   width: 30.6%;
@@ -1076,11 +1074,11 @@ img {
 .mouse-box {
   width: 7.6%;
   position: absolute;
-  top: 78%;
-  right: 33%;
+  top: 67.6%;
+  right: 39%;
 }
 .mouse-box img {
-  width: 80%;
+  width: 100%;
   position: absolute;
   top: 18px;
   left: 18px;
