--- a/css/style.less
+++ b/css/style.less
@@ -236,16 +236,16 @@ img {
 .page-one {
     height: 90%;
     width: 82%;
-    margin: 10% auto;
+    margin: 4% auto;
     box-sizing: border-box;
     .activ-one {
         width: 100%;
 
         text-align: center;
         float: left;
-        margin-bottom: 5%;
+      
         img {
-            width: 90%;
+            width: 84%;
         }
     }
     .one-box {
@@ -373,30 +373,32 @@ img {
     width: 100%;
     height: 100%;
     position: relative;
+    overflow: hidden;
     .two-a {
-        width: 35.6%;
-        display: inline-block;
-        margin: 20px auto auto 30px;
+        width: 34%;
+        position: absolute;
+        left: 10%;
+        top: 3%;
         img {
             width: 100%;
         }
     }
     .two-b {
         width: 16.6%;
-        display: inline-block;
-        vertical-align: top;
-        margin: 46px auto auto 48px;
+        position: absolute;
+        left: 60%;
+        top: 3%;
         img {
             width: 100%;
         }
     }
     .two-c {
-        width: 19.4%;
+        width: 19%;
         display: inline-block;
         vertical-align: top;
         position: absolute;
         right: 7%;
-        top: 18%;
+        top: 14%;
         img {
             width: 100%;
         }
@@ -407,18 +409,18 @@ img {
         vertical-align: top;
         position: absolute;
         right: 0%;
-        top: 25%;
+        top: 20%;
         img {
             width: 100%;
         }
     }
     .two-e {
-        width: 32.9%;
+        width: 32%;
         display: inline-block;
         vertical-align: top;
         position: absolute;
         left: 0%;
-        top: 25%;
+        top: 21%;
         img {
             width: 100%;
         }
@@ -427,7 +429,7 @@ img {
         width: 48.6%;
         position: absolute;
         z-index: 111;
-        top: 22%;
+        top: 18%;
         left: 50%;
         margin-left: -24.3%;
     }
@@ -439,10 +441,10 @@ img {
         background-position: center 0;
         background-size: 90%;
         position: relative;
-        margin-top: 40%;
+        margin-top: 64%;
         box-sizing: border-box;
         overflow: hidden;
-        min-height: 261px;
+        min-height: 340px;
         text-align: center;
         .two-g {
             width: 65.86%;
@@ -450,7 +452,7 @@ img {
         }
     }
     .two-h {
-        width: 30.5%;
+        width: 26%;
         position: absolute;
         bottom: -3px;
         left: 0;
@@ -484,16 +486,16 @@ img {
         }
     }
     .three-b {
-        width: 23.7%;
+        width: 20%;
         position: absolute;
         left: 47.5%;
-        top: 6.4%;
+        top: 4.4%;
         img {
             width: 100%;
         }
     }
     .three-c {
-        width: 32%;
+        width: 30%;
         position: absolute;
         right: 1%;
         top: 10.7%;
@@ -511,7 +513,7 @@ img {
         }
     }
     .three-e {
-        width: 34.6%;
+        width: 32%;
         position: absolute;
         left: 1%;
         top: 18.4%;
@@ -542,7 +544,7 @@ img {
 
         position: absolute;
         z-index: 111;
-        top: 22%;
+        top: 19.8%;
         left: 50%;
         margin-left: -24.3%;
     }
@@ -554,9 +556,9 @@ img {
         background-position: center 0;
         background-size: 90%;
         position: relative;
-        margin-top: 70%;
+        margin-top: 64%;
         box-sizing: border-box;
-        min-height: 261px;
+        min-height: 340px;
         text-align: center;
         .three-i {
             width: 65.6%;
@@ -564,16 +566,16 @@ img {
         }
     }
     .three-j {
-        width: 27.8%;
+        width: 24%;
         position: absolute;
-        bottom: 2%;
+        bottom: 0.1%;
         left: 2%;
     }
     .three_k {
-        width: 33.2%;
+        width: 30%;
         position: absolute;
         right: 3%;
-        bottom: 3%;
+        bottom: 0.1%;
     }
 }
 
@@ -585,51 +587,51 @@ img {
     .four-a {
         width: 40%;
         position: absolute;
-        top: 4%;
+        top:3%;
         left: 50%;
         margin-left: -20%;
     }
     .four-b {
-        width: 33%;
+        width:28%;
         position: absolute;
-        top: 11%;
+        top: 9%;
         left: 4.5%;
     }
     .four-c {
-        width: 26%;
+        width: 23%;
         position: absolute;
-        top: 12%;
-        right: 4.5%;
+        top: 73px;
+        right: 7.5%;
     }
     .four-d {
         width: 11%;
         position: absolute;
-        top: 18%;
+        top: 110px;
         left: 15.5%;
     }
     .four-e {
-        width: 34.2%;
+        width: 31%;
         position: absolute;
-        top: 17%;
+        top: 13%;
         left: 34%;
     }
     .four-f {
-        width: 21.3%;
+        width: 20%;
         position: absolute;
-        top: 23%;
-        left: 13%;
+        top: 150px;
+        left: 10%;
     }
     .four-g {
-        width: 33%;
+        width: 30%;
         position: absolute;
-        top: 22%;
+        top: 18%;
         right: 0%;
     }
     .four-h {
         width: 50.5%;
         position: absolute;
         left: 50%;
-        top: 22%;
+        top: 18%;
         margin-left: -25.15%;
         z-index: 23;
     }
@@ -641,25 +643,25 @@ img {
         background-position: center 0;
         background-size: 90%;
         position: relative;
-        margin-top:68%;
+        margin-top:64%;
         box-sizing: border-box;
-        min-height: 261px;
+        min-height: 340px;
         text-align: center;
         z-index: 22;
         .three-i {
             width: 65.6%;
-            margin-top: 24%;
+            margin-top:23%;
         }
     }
     .four-i {
-        width: 20%;
+        width: 18%;
         position: absolute;
         left: 8%;
         bottom: 2%;
         z-index: 23;
     }
     .four-j {
-        width: 48.5%;
+        width: 46%;
         position: absolute;
         right: 7%;
         bottom: 2%;
@@ -673,16 +675,16 @@ img {
     position: relative;
     overflow: hidden;
     .five-a {
-        width: 40%;
+        width: 36%;
         position: absolute;
         top: 3%;
         left: 50%;
         margin-left: -20%;
     }
     .five-b {
-        width: 25%;
+        width: 22%;
         position: absolute;
-        top: 9%;
+        top: 7%;
         left: 4%;
     }
     .five-c {
@@ -692,51 +694,46 @@ img {
         right: 6%;
     }
     .five-d {
-        width: 45.7%;
+        width: 43%;
         position: absolute;
-        top: 14%;
+        top: 12%;
         left: 25%;
     }
     .five-e {
         width: 11%;
         position: absolute;
-        top: 20%;
+        top: 17%;
         left: 13%;
     }
-    .five-f {
-        width: 11%;
-        position: absolute;
-        top: 20%;
-        left: 13%;
-    }
+   
     .five-g {
-        width: 34%;
+        width: 30%;
         position: absolute;
         top: 20%;
         right: 2%;
     }
     .five-h {
-        width: 34%;
+        width: 29%;
         position: absolute;
-        top: 26%;
+        top: 23%;
         left: 6%;
     }
     .five-i {
-        width: 66%;
+        width: 66.6%;
         position: absolute;
         left: 50%;
-        top: 19%;
+        top: 16%;
         margin-left: -33%;
         z-index: 23;
     }
     .five-j {
-        width: 46.9%;
+        width: 43%;
         position: absolute;
         left: 5%;
         bottom: 2%;
     }
     .five-k {
-        width: 31.2%;
+        width: 26%;
         position: absolute;
         right: 5%;
         bottom: 0%;
@@ -750,21 +747,21 @@ img {
         background-position: center 0;
         background-size: 90%;
         position: relative;
-        margin-top: 66%;
+        margin-top: 64%;
         box-sizing: border-box;
-        min-height: 261px;
+        min-height: 340px;
         text-align: center;
         z-index: 22;
         overflow: hidden;
         .three-i {
             width: 68%;
-            margin-top: 24%;
+            margin-top: 23%;
         }
         .three-j {
             width: 10.1%;
             position: absolute;
             right: 10%;
-            top: 80%;
+            top: 60%;
             margin-bottom: 6%;
         }
     }
@@ -834,26 +831,26 @@ img {
         background-position: center 0;
         background-size: 90%;
         position: relative;
-        margin-top: 64%;
+        margin-top: 62%;
         box-sizing: border-box;
-        min-height: 261px;
+        min-height: 340px;
         text-align: center;
         z-index: 22;
         overflow: hidden;
         .three-i {
             width: 70.9%;
-            margin-top: 24%;
+             margin-top:23%;
         }
     }
     .six-i {
-        width: 24%;
+        width: 22%;
         position: absolute;
         left: 1.5%;
-        bottom: 2%;
+        bottom: 1.6%;
         z-index: 23;
     }
     .six-j {
-        width: 13.45%;
+        width: 12%;
         position: absolute;
         right: 7%;
         bottom: 1%;
@@ -915,7 +912,7 @@ img {
         top: 20%;
     }
     .seven-i {
-        width: 46%;
+        width: 46.6%;
         position: absolute;
         left: 50%;
         top: 17%;
@@ -930,29 +927,29 @@ img {
         background-position: center 0;
         background-size: 90%;
         position: relative;
-        margin-top: 62%;
+        margin-top:64%;
         box-sizing: border-box;
-        min-height: 261px;
+        min-height: 340px;
         text-align: center;
         z-index: 22;
         overflow: hidden;
         .three-i {
             width: 79.7%;
-            margin-top: 24%;
+           margin-top:23%;
         }
     }
     .seven-j {
-        width: 21%;
+        width: 18%;
         position: absolute;
-        left: 8%;
-        bottom: 2%;
+        left: 7%;
+        bottom: 0.5%;
         z-index: 23;
     }
     .seven-K {
-        width: 22%;
+        width: 18%;
         position: absolute;
         right: 2%;
-        bottom: 1%;
+        bottom: 0.1%;
         z-index: 23;
     }
 }
@@ -993,7 +990,7 @@ img {
         top: 20%;
     }
     .eight-f {
-        width: 46%;
+        width: 46.6666%;
         position: absolute;
         left: 50%;
         top: 15%;
@@ -1001,18 +998,18 @@ img {
         z-index: 23;
     }
     .eight-g {
-        width: 30%;
+        width: 28%;
         position: absolute;
         left: 3%;
-        bottom: 2%;
+        bottom: 1%;
 
         z-index: 23;
     }
     .eight-h {
-        width: 28%;
+        width: 26%;
         position: absolute;
         right: 10%;
-        bottom: 2%;
+        bottom: 0.2%;
 
         z-index: 23;
     }
@@ -1026,13 +1023,13 @@ img {
         position: relative;
         margin-top: 63%;
         box-sizing: border-box;
-        min-height: 261px;
+        min-height: 340px;
         text-align: center;
         z-index: 22;
         overflow: hidden;
         .three-i {
             width: 79.7%;
-            margin-top: 24%;
+            margin-top:23%;
         }
     }
 }
@@ -1044,15 +1041,18 @@ img {
     height: 100%;
     position: relative;
     margin: auto;
-    background-image: url('../images/joinbg.png');
+    background-image: url('../images/webbg.png');
     background-size: cover;
     background-repeat: no-repeat;
     overflow: hidden;
     .box-insider {
         width: 100%;
         height: 100%;
+        background-image: url('../images/joinbg.png');
         text-align: center;
         position: relative;
+        background-size: 100%;
+        background-repeat: no-repeat;
         .pic_a {
             width: 30.6%;
             margin: auto;
@@ -1123,10 +1123,10 @@ img {
 .mouse-box {
     width: 7.6%;
     position: absolute;
-    top: 78%;
-    right: 33%;
+    top: 67.6%;
+    right: 39%;
     img {
-        width: 80%;
+        width: 100%;
         position: absolute;
         top: 18px;
         left: 18px;
@@ -1675,4 +1675,8 @@ img {
     -webkit-animation-iteration-count: infinite;
     -moz-animation-iteration-count: infinite;
     animation-iteration-count: infinite;
+}
+
+@media screen and (max-device-height: 570px){
+
 }
