--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,9 @@ body {
 img {
   max-width: 100%;
 }
+.disnone {
+  display: none;
+}
 .home-box {
   width: 100%;
   max-width: 750px;
@@ -59,7 +62,7 @@ img {
   width: 100%;
   height: 52%;
   position: absolute;
-  top: 23%;
+  top: 27%;
   left: 0;
   z-index: 99;
 }
@@ -122,44 +125,40 @@ img {
 .about-box {
   width: 100%;
   max-width: 750px;
-  height: 100%;
+  min-height: 100%;
   position: relative;
   margin: auto;
-  background-image: url('../images/about-bg.png');
+  background-image: url('../images/webbg.png');
   background-size: cover;
   background-repeat: no-repeat;
   overflow: hidden;
 }
 .about-box .txt-box {
   overflow: hidden;
-  margin: 10% auto;
-  width: 90%;
-}
-.about-box .txt-box ul {
-  padding-left: 0;
-  width: 88%;
-  margin: 7% auto;
-}
-.about-box .txt-box ul li.tit-li {
-  margin-bottom: 5%;
-}
-.about-box .txt-box ul li.tit2 {
-  margin-top: 8%;
-}
-.about-box .txt-box ul li {
-  list-style: none;
-  width: 100%;
   text-align: center;
-  margin-bottom: 3%;
+  width: 100%;
+  background-image: url('../images/about-bg.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center 10px;
+  background-size: 96%;
 }
-.about-box .txt-box ul li img.big-txt {
-  width: 80%;
+.about-box .txt-box .abo-txt {
+  width: 80.1%;
+  margin-top: 16%;
+  animate-duration: 2s;
+  animate-delay: 5s;
+}
+.about-box .txt-box .abo1-txt {
+  width: 69.8%;
+  margin-left: -11.15%;
+  margin-top: 5%;
+  padding-bottom: 80px;
 }
 .about-box .back-box {
   width: 100%;
   text-align: center;
-  position: absolute;
-  bottom: 3%;
+  margin-bottom: 30px;
 }
 .about-box .back-box a {
   display: block;
@@ -1006,8 +1005,9 @@ img {
   background-image: url('../images/joinbg.png');
   text-align: center;
   position: relative;
-  background-size: 100%;
+  background-size: 96%;
   background-repeat: no-repeat;
+  background-position: center 20%;
 }
 .join-boxaa .box-insider .pic_a {
   width: 30.6%;
@@ -1033,8 +1033,8 @@ img {
   left: 50%;
   margin-left: -39.2%;
   top: 31%;
-  -webkit-animation: snowa 1s infinite;
-  animation: snowa 1s infinite;
+  -webkit-animation: opacitypic 1s infinite;
+  animation: opacitypic 1s infinite;
 }
 .join-boxaa .box-insider .pic_d {
   display: block;
@@ -1212,232 +1212,6 @@ img {
     opacity: 1;
   }
 }
-.first-words {
-  opacity: 0;
-  /*实先规定文字的状态是不显示的*/
-  animation: fade-in 2s ease 0s 1;
-  /*调用名称为fade-in的动画，全程动画显示时间4S，进入方式为ease，延时0S进入，播放次数1次*/
-  -webkit-animation: fade-in 2s ease 0s 1;
-  -moz-animation: fade-in 2s ease 0s 1;
-  -o-animation: fade-in 2s ease 0s 1;
-  -ms-animation: fade-in 2s ease 0s 1;
-  /*规定动画的最后状态为结束状态*/
-  animation-fill-mode: forwards;
-  -webkit-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-}
-.second-words {
-  opacity: 0;
-  animation: fade-in 2s ease 1s 1;
-  -webkit-animation: fade-in 2s ease 1s 1;
-  -moz-animation: fade-in 2s ease 1s 1;
-  -o-animation: fade-in 2s ease 1s 1;
-  -ms-animation: fade-in 2s ease 1s 1;
-  /*规定动画的最后状态为结束状态*/
-  animation-fill-mode: forwards;
-  -webkit-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-}
-.third-words {
-  opacity: 0;
-  animation: fade-in 2s ease 2s 1;
-  -webkit-animation: fade-in 2s ease 2s 1;
-  -moz-animation: fade-in 2s ease 2s 1;
-  -o-animation: fade-in 2s ease 2s 1;
-  -ms-animation: fade-in 2s ease 2s 1;
-  /*规定动画的最后状态为结束状态*/
-  animation-fill-mode: forwards;
-  -webkit-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-}
-.four-words {
-  opacity: 0;
-  animation: fade-in 2s ease 3s 1;
-  -webkit-animation: fade-in 2s ease 3s 1;
-  -moz-animation: fade-in 2s ease 3s 1;
-  -o-animation: fade-in 2s ease 3s 1;
-  -ms-animation: fade-in 2s ease 3s 1;
-  /*规定动画的最后状态为结束状态*/
-  animation-fill-mode: forwards;
-  -webkit-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-}
-.five-words {
-  opacity: 0;
-  animation: fade-in 2s ease 4s 1;
-  -webkit-animation: fade-in 3s ease 4s 1;
-  -moz-animation: fade-in 2s ease 4s 1;
-  -o-animation: fade-in 2s ease 4s 1;
-  -ms-animation: fade-in 2s ease 4s 1;
-  /*规定动画的最后状态为结束状态*/
-  animation-fill-mode: forwards;
-  -webkit-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-}
-.six-words {
-  opacity: 0;
-  animation: fade-in 2s ease 5s 1;
-  -webkit-animation: fade-in 2s ease 5s 1;
-  -moz-animation: fade-in 2s ease 5s 1;
-  -o-animation: fade-in 2s ease 5s 1;
-  -ms-animation: fade-in 2s ease 5s 1;
-  /*规定动画的最后状态为结束状态*/
-  animation-fill-mode: forwards;
-  -webkit-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-}
-.seven-words {
-  opacity: 0;
-  animation: fade-in 2s ease 6s 1;
-  -webkit-animation: fade-in 2s ease 6s 1;
-  -moz-animation: fade-in 2s ease 6s 1;
-  -o-animation: fade-in 2s ease 6s 1;
-  -ms-animation: fade-in 2s ease 6s 1;
-  /*规定动画的最后状态为结束状态*/
-  animation-fill-mode: forwards;
-  -webkit-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-}
-.eight-words {
-  opacity: 0;
-  animation: fade-in 2s ease 7s 1;
-  -webkit-animation: fade-in 2s ease 7s 1;
-  -moz-animation: fade-in 2s ease 7s 1;
-  -o-animation: fade-in 2s ease 7s 1;
-  -ms-animation: fade-in 2s ease 7s 1;
-  /*规定动画的最后状态为结束状态*/
-  animation-fill-mode: forwards;
-  -webkit-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-}
-.nine-words {
-  opacity: 0;
-  animation: fade-in 2s ease 8s 1;
-  -webkit-animation: fade-in 2s ease 8s 1;
-  -moz-animation: fade-in 2s ease 8s 1;
-  -o-animation: fade-in 2s ease 8s 1;
-  -ms-animation: fade-in 2s ease 8s 1;
-  /*规定动画的最后状态为结束状态*/
-  animation-fill-mode: forwards;
-  -webkit-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-}
-.ten-words {
-  opacity: 0;
-  animation: fade-in 2s ease 9s 1;
-  -webkit-animation: fade-in 2s ease 9s 1;
-  -moz-animation: fade-in 2s ease 9s 1;
-  -o-animation: fade-in 2s ease 9s 1;
-  -ms-animation: fade-in 2s ease 9s 1;
-  /*规定动画的最后状态为结束状态*/
-  animation-fill-mode: forwards;
-  -webkit-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-}
-.eleven-words {
-  opacity: 0;
-  animation: fade-in 2s ease 10s 1;
-  -webkit-animation: fade-in 2s ease 10s 1;
-  -moz-animation: fade-in 2s ease 10s 1;
-  -o-animation: fade-in 2s ease 10s 1;
-  -ms-animation: fade-in 2s ease 10s 1;
-  /*规定动画的最后状态为结束状态*/
-  animation-fill-mode: forwards;
-  -webkit-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-}
-.twelve-words {
-  opacity: 0;
-  animation: fade-in 2s ease 11s 1;
-  -webkit-animation: fade-in 2s ease 11s 1;
-  -moz-animation: fade-in 2s ease 11s 1;
-  -o-animation: fade-in 2s ease 11s 1;
-  -ms-animation: fade-in 2s ease 11s 1;
-  /*规定动画的最后状态为结束状态*/
-  animation-fill-mode: forwards;
-  -webkit-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-}
-.thirteen-words {
-  opacity: 0;
-  animation: fade-in 2s ease 12s 1;
-  -webkit-animation: fade-in 2s ease 12s 1;
-  -moz-animation: fade-in 2s ease 12s 1;
-  -o-animation: fade-in 2s ease 12s 1;
-  -ms-animation: fade-in 2s ease 12s 1;
-  /*规定动画的最后状态为结束状态*/
-  animation-fill-mode: forwards;
-  -webkit-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-}
-.fourteen-words {
-  opacity: 0;
-  animation: fade-in 2s ease 13s 1;
-  -webkit-animation: fade-in 2s ease 13s 1;
-  -moz-animation: fade-in 2s ease 13s 1;
-  -o-animation: fade-in 2s ease 13s 1;
-  -ms-animation: fade-in 2s ease 13s 1;
-  /*规定动画的最后状态为结束状态*/
-  animation-fill-mode: forwards;
-  -webkit-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-}
-.fifteen-words {
-  opacity: 0;
-  animation: fade-in 2s ease 14s 1;
-  -webkit-animation: fade-in 2s ease 14s 1;
-  -moz-animation: fade-in 2s ease 14s 1;
-  -o-animation: fade-in 2s ease 14s 1;
-  -ms-animation: fade-in 2s ease 14s 1;
-  /*规定动画的最后状态为结束状态*/
-  animation-fill-mode: forwards;
-  -webkit-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-}
-.sixteen-words {
-  opacity: 0;
-  animation: fade-in 2s ease 15s 1;
-  -webkit-animation: fade-in 2s ease 15s 1;
-  -moz-animation: fade-in 2s ease 15s 1;
-  -o-animation: fade-in 2s ease 15s 1;
-  -ms-animation: fade-in 2s ease 15s 1;
-  /*规定动画的最后状态为结束状态*/
-  animation-fill-mode: forwards;
-  -webkit-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  -ms-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-}
 @keyframes warn {
   0% {
     opacity: 0;
@@ -1460,19 +1234,19 @@ img {
 }
 @keyframes myrotate {
   form {
-    transform: rotateZ(0deg);
+    transform: rotate(0deg);
   }
   to {
-    transform: rotateZ(360deg);
+    transform: rotate(360deg);
   }
 }
 @-webkit-keyframes myrotate {
   /* Safari and Chrome */
   form {
-    transform: rotateZ(0deg);
+    transform: rotate(0deg);
   }
   to {
-    transform: rotateZ(360deg);
+    transform: rotate(360deg);
   }
 }
 @keyframes warna {
@@ -1556,4 +1330,337 @@ img {
   -webkit-animation-iteration-count: infinite;
   -moz-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
+}
+.loaerbox {
+  width: 100%;
+  height: 100%;
+  background: #36363d;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  font-family: "Microsoft Yahei";
+}
+#container {
+  width: 60%;
+  margin: 0 auto;
+}
+#container h1 {
+  color: white;
+  font-size: 1em;
+  letter-spacing: 1.5px;
+  text-align: center;
+  margin-top: 20px;
+  -webkit-animation: fade 2s infinite;
+  -moz-animation: fade 2s infinite;
+}
+.tip-box {
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  bottom: 1%;
+  color: #fff;
+  font-size: 0.7rem;
+}
+.stick {
+  width: 30px;
+  height: 3px;
+  background: white;
+  display: inline-block;
+  margin-left: -8px;
+}
+.stick:nth-child(n) {
+  transform: rotate(30deg);
+  -ms-transform: rotate(30deg);
+  /* IE 9 */
+  -webkit-transform: rotate(30deg);
+  /* Safari and Chrome */
+  -moz-transform: rotate(30deg);
+  -webkit-animation: fall 2s infinite;
+  -moz-animation: fall 2s infinite;
+}
+.stick:nth-child(2n) {
+  transform: rotate(-30deg);
+  -ms-transform: rotate(-30deg);
+  /* IE 9 */
+  -webkit-transform: rotate(-30deg);
+  /* Safari and Chrome */
+  -moz-transform: rotate(-30deg);
+  -webkit-animation: rise 2s infinite;
+  -moz-animation: rise 2s infinite;
+}
+@-webkit-keyframes rise {
+  50% {
+    transform: rotate(30deg);
+    -ms-transform: rotate(30deg);
+    /* IE 9 */
+    -webkit-transform: rotate(30deg);
+    -moz-transform: rotate(30deg);
+  }
+}
+@-moz-keyframes rise {
+  50% {
+    transform: rotate(30deg);
+    -ms-transform: rotate(30deg);
+    /* IE 9 */
+    -webkit-transform: rotate(30deg);
+    -moz-transform: rotate(30deg);
+  }
+}
+@-o-keyframes rise {
+  50% {
+    transform: rotate(30deg);
+    -ms-transform: rotate(30deg);
+    /* IE 9 */
+    -webkit-transform: rotate(30deg);
+    -moz-transform: rotate(30deg);
+  }
+  @keyframes rise {
+    50% {
+      transform: rotate(30deg);
+      -ms-transform: rotate(30deg);
+      /* IE 9 */
+      -webkit-transform: rotate(30deg);
+      -moz-transform: rotate(30deg);
+    }
+  }
+}
+@-webkit-keyframes fall {
+  50% {
+    transform: rotate(-30deg);
+    -ms-transform: rotate(-30deg);
+    /* IE 9 */
+    -webkit-transform: rotate(-30deg);
+    -moz-transform: rotate(30deg);
+  }
+}
+@-moz-keyframes fall {
+  50% {
+    transform: rotate(-30deg);
+    -ms-transform: rotate(-30deg);
+    /* IE 9 */
+    -webkit-transform: rotate(-30deg);
+    -moz-transform: rotate(-30deg);
+  }
+}
+@-o-keyframes fall {
+  50% {
+    transform: rotate(-30deg);
+    -ms-transform: rotate(-30deg);
+    /* IE 9 */
+    -webkit-transform: rotate(-30deg);
+    -moz-transform: rotate(30deg);
+  }
+  @keyframes fall {
+    50% {
+      transform: rotate(-30deg);
+      -ms-transform: rotate(-30deg);
+      /* IE 9 */
+      -webkit-transform: rotate(-30deg);
+      -moz-transform: rotate(30deg);
+    }
+  }
+}
+@-webkit-keyframes fade {
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-moz-keyframes fade {
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-o-keyframes fade {
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+  @keyframes fade {
+    50% {
+      opacity: 0.5;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+}
+#colorfulPulse {
+  width: 200px;
+  height: 80px;
+  margin: 0 auto;
+}
+#colorfulPulse span {
+  display: inline-block;
+  width: 10px;
+  height: 40px;
+  animation-name: scale;
+  -webkit-animation-name: scale;
+  -moz-animation-name: scale;
+  -ms-animation-name: scale;
+  -o-animation-name: scale;
+  animation-duration: 1.2s;
+  -webkit-animation-duration: 1.2s;
+  -moz-animation-duration: 1.2s;
+  -ms-animation-duration: 1.2s;
+  -o-animation-duration: 1.2s;
+  animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+  -moz-animation-iteration-count: infinite;
+  -ms-animation-iteration-count: infinite;
+  -o-animation-iteration-count: infinite;
+}
+span.item-1 {
+  background: #2ecc71;
+}
+span.item-2 {
+  background: #3498db;
+}
+span.item-3 {
+  background: #9b59b6;
+}
+span.item-4 {
+  background: #e67e22;
+}
+span.item-5 {
+  background: #c0392b;
+}
+span.item-6 {
+  background: #e74c3c;
+}
+span.item-7 {
+  background: #e74c8c;
+}
+.item-1 {
+  animation-delay: -1s;
+  -webkit-animation-delay: -1s;
+  -moz-animation-delay: -1s;
+  -ms-animation-delay: -1s;
+  -o-animation-delay: -1s;
+}
+.item-2 {
+  animation-delay: -0.9s;
+  -webkit-animation-delay: -0.9s;
+  -moz-animation-delay: -0.9s;
+  -ms-animation-delay: -0.9s;
+  -o-animation-delay: -0.9s;
+}
+.item-3 {
+  animation-delay: -0.8s;
+  -webkit-animation-delay: -0.8s;
+  -moz-animation-delay: -0.8s;
+  -ms-animation-delay: -0.8s;
+  -o-animation-delay: -0.8s;
+}
+.item-4 {
+  animation-delay: -0.7s;
+  -webkit-animation-delay: -0.7s;
+  -moz-animation-delay: -0.7s;
+  -ms-animation-delay: -0.7s;
+  -o-animation-delay: -0.7s;
+}
+.item-5 {
+  animation-delay: -0.6s;
+  -webkit-animation-delay: -0.6s;
+  -moz-animation-delay: -0.6s;
+  -ms-animation-delay: -0.6s;
+  -o-animation-delay: -0.6s;
+}
+.item-6 {
+  animation-delay: -0.5s;
+  -webkit-animation-delay: -0.5s;
+  -moz-animation-delay: -0.5s;
+  -ms-animation-delay: -0.5s;
+  -o-animation-delay: -0.5s;
+}
+.item-7 {
+  animation-delay: -0.4s;
+  -webkit-animation-delay: -0.4s;
+  -moz-animation-delay: -0.4s;
+  -ms-animation-delay: -0.4s;
+  -o-animation-delay: -0.4s;
+}
+@-webkit-keyframes scale {
+  0%,
+  40%,
+  100% {
+    -moz-transform: scaleY(0.2);
+    -ms-transform: scaleY(0.2);
+    -o-transform: scaleY(0.2);
+    -webkit-transform: scaleY(0.2);
+    transform: scaleY(0.2);
+  }
+  20%,
+  60% {
+    -moz-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    -o-transform: scaleY(1);
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+}
+@-moz-keyframes scale {
+  0%,
+  40%,
+  100% {
+    -moz-transform: scaleY(0.2);
+    -ms-transform: scaleY(0.2);
+    -o-transform: scaleY(0.2);
+    -webkit-transform: scaleY(0.2);
+    transform: scaleY(0.2);
+  }
+  20%,
+  60% {
+    -moz-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    -o-transform: scaleY(1);
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+}
+@-ms-keyframes scale {
+  0%,
+  40%,
+  100% {
+    -moz-transform: scaleY(0.2);
+    -ms-transform: scaleY(0.2);
+    -o-transform: scaleY(0.2);
+    -webkit-transform: scaleY(0.2);
+    transform: scaleY(0.2);
+  }
+  20%,
+  60% {
+    -moz-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    -o-transform: scaleY(1);
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+}
+@keyframes scale {
+  0%,
+  40%,
+  100% {
+    -moz-transform: scaleY(0.2);
+    -ms-transform: scaleY(0.2);
+    -o-transform: scaleY(0.2);
+    -webkit-transform: scaleY(0.2);
+    transform: scaleY(0.2);
+  }
+  20%,
+  60% {
+    -moz-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    -o-transform: scaleY(1);
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
 }
