--- a/css/style.less
+++ b/css/style.less
@@ -133,7 +133,9 @@ img {
     }
 }
 
-
+.linkbtnbox{
+    position: relative;
+}
 // 了解港迅
 .about-box {
     width: 100%;
@@ -245,6 +247,8 @@ img {
 
         text-align: center;
         float: left;
+        
+      
 
         img {
             width: 84%;
@@ -284,7 +288,7 @@ img {
         .threepic-box {
             width: 18%;
             float: right;
-
+            
             img {
                 width: 100%;
             }
@@ -304,6 +308,7 @@ img {
         .left-pic {
             width: 19%;
             float: left;
+             
             img.pic_a {
                 width: 100%;
             }
@@ -346,6 +351,7 @@ img {
             }
             .pic-h {
                 width: 52%;
+                
             }
             .pic-i {
                 width: 44%;
@@ -1127,7 +1133,7 @@ img {
 .mouse-box {
     width: 7.6%;
     position: absolute;
-    top: 67.6%;
+    top: 35%;
     right: 39%;
     img {
         width: 100%;
@@ -1318,7 +1324,18 @@ img {
         transform: rotate(360deg);
     }
 }
-
+ // 左右位移
+ @keyframes lefttorignt {
+    0%  {
+        transform: translateX(0%);
+    }
+    50% {
+        transform: translateX(0.5%);
+    }
+    100%{
+         transform: translateX(-0.5%);
+    }
+}
 @-webkit-keyframes myrotate {
     /* Safari and Chrome */
     form {
