--- a/css/style.css
+++ b/css/style.css
@@ -145,17 +145,18 @@ img {
   background-repeat: no-repeat;
   background-position: center 10px;
   background-size: 96%;
+  margin-bottom: 5%;
 }
 .about-box .txt-box .abo-txt {
   width: 80.1%;
-  margin-top: 16%;
+  margin-top: 17%;
   animate-duration: 2s;
   animate-delay: 5s;
 }
 .about-box .txt-box .abo1-txt {
   width: 69.8%;
   margin-left: -11.15%;
-  margin-top: 5%;
+  margin-top: 12%;
   padding-bottom: 80px;
 }
 .about-box .back-box {
@@ -172,6 +173,51 @@ img {
 @media screen and (max-width: 320px) {
   .about-box .txt-box ul li {
     margin-bottom: 2%;
+  }
+}
+#audio_btn {
+  width: 30px;
+  height: 30px;
+  background-image: url(../images/music.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 999999;
+  border: 2px #fff solid;
+  border-radius: 50%;
+  background-size: 40%;
+}
+.rotate {
+  -webkit-animation: rotating 1.2s linear infinite;
+  -moz-animation: rotating 1.2s linear infinite;
+  -o-animation: rotating 1.2s linear infinite;
+  animation: rotating 1.2s linear infinite;
+}
+@-webkit-keyframes rotating {
+  from {
+    -webkit-transform: rotate(0);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
+@keyframes rotating {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@-moz-keyframes rotating {
+  from {
+    -moz-transform: rotate(0);
+  }
+  to {
+    -moz-transform: rotate(360deg);
   }
 }
 .swiper-container {
@@ -210,11 +256,21 @@ img {
   animation: sdb05 1.5s infinite;
   box-sizing: border-box;
 }
+.pageoneac {
+  -webkit-animation: lefttorignt 3s 3s infinite;
+  animation: lefttorignt 3s 3s infinite;
+}
+.mouseami {
+  -webkit-animation: downrighttoleftup 3s 3s alternate forwards;
+  animation: downrighttoleftup 3s 3s alternate forwards;
+}
 .page-one {
-  height: 90%;
+  box-sizing: border-box;
   width: 82%;
   margin: 4% auto;
-  box-sizing: border-box;
+  height: 90%;
+  display: block;
+  overflow: hidden;
 }
 .page-one .activ-one {
   width: 100%;
@@ -527,6 +583,7 @@ img {
   box-sizing: border-box;
   min-height: 340px;
   text-align: center;
+  overflow: hidden;
 }
 .page-three .txt-box .three-i {
   width: 65.6%;
@@ -614,6 +671,7 @@ img {
   min-height: 340px;
   text-align: center;
   z-index: 22;
+  overflow: hidden;
 }
 .page-four .txt-box .three-i {
   width: 65.6%;
@@ -1068,6 +1126,76 @@ img {
 .join-boxaa .backbox img {
   width: 35.7%;
 }
+.page-night {
+  width: 92%;
+  height: 90%;
+  background: url('../images/joinbg.png');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center 30px;
+  position: relative;
+  overflow: hidden;
+  margin: auto;
+}
+.page-night .pic_a {
+  width: 30.6%;
+  margin: auto;
+  position: absolute;
+  top: 34%;
+  left: 50%;
+  margin-left: -15.3%;
+}
+.page-night .pic_b {
+  width: 8.2%;
+  position: absolute;
+  top: 42.2%;
+  left: 50%;
+  margin-left: -4.1%;
+}
+.page-night .pic_c {
+  width: 10%;
+  position: absolute;
+  top: 33%;
+  left: 70%;
+}
+.page-night .pic_d {
+  display: block;
+  width: 60.9%;
+  z-index: 24;
+  position: absolute;
+  left: 50%;
+  margin-left: -30.4%;
+  top: 50%;
+}
+.page-night .pic_e {
+  width: 38.1%;
+  position: absolute;
+  left: 50%;
+  margin-left: -19%;
+  top: 60%;
+}
+.page-night .pic_f {
+  width: 13%;
+  position: absolute;
+  top: 34%;
+  left: 10%;
+}
+.page-night .pic_g {
+  width: 13%;
+  position: absolute;
+  top: 55%;
+  right: 10%;
+}
+.backbox {
+  display: inline-block;
+  text-align: center;
+  position: absolute;
+  bottom: 5%;
+  width: 100%;
+}
+.backbox img {
+  width: 35.7%;
+}
 .join-btn {
   width: 56.5%;
   margin: 6% auto 10% auto;
@@ -1077,8 +1205,6 @@ img {
 .mouse-box {
   width: 7.6%;
   position: absolute;
-  top: 35%;
-  right: 39%;
 }
 .mouse-box img {
   width: 100%;
@@ -1243,15 +1369,38 @@ img {
     transform: rotate(360deg);
   }
 }
+@keyframes downrighttoleftup {
+  from {
+    top: 40%;
+    right: 30%;
+  }
+  to {
+    top: 35%;
+    right: 39%;
+  }
+}
 @keyframes lefttorignt {
-  0% {
-    transform: translateX(0%);
+  0%,
+  100%,
+  20%,
+  50%,
+  80% {
+    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    /*贝塞尔曲线 ： X1 Y1 X2 Y2*/
+    transform: translate3d(0, 0, 0);
+    /*设置只在Z轴上移动*/
   }
-  50% {
-    transform: translateX(0.5%);
+  40%,
+  43% {
+    transition-timing-function: cubic-bezier(0.755, 0.5, 0.855, 0.06);
+    transform: translate3d(-20px, 0, 0);
   }
-  100% {
-    transform: translateX(-0.5%);
+  70% {
+    transition-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    transform: translate3d(-15px, 0, 0);
+  }
+  90% {
+    transform: translate3d(-10px, 0, 0);
   }
 }
 @-webkit-keyframes myrotate {
