--- a/css/style.less
+++ b/css/style.less
@@ -138,6 +138,11 @@ img {
 .linkbtnbox {
     position: relative;
 }
+.linkbtnbox a{
+    width: 100%;
+    height: 100%;
+    display: block;
+}
 
 // 了解港迅
 .about-box {
@@ -1102,28 +1107,16 @@ img {
     }
 }
 
-// 加入我们
-.join-boxaa {
-    width: 100%;
-    max-width: 750px;
-    height: 100%;
-    position: relative;
-    margin: auto;
-    background-image: url('../images/webbg.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    overflow: hidden;
-    
-}
+
 
 
 .page-night {
-    width: 94%;
-    height: 90%;
+    width: 98%;
+    height: 100%;
     background: url('../images/joinbg.png');
     background-repeat: no-repeat;
     background-size: 100%;
-    background-position: center 16px;
+    background-position: center 35%;
     position: relative;
 
     overflow: hidden;
@@ -1139,7 +1132,7 @@ img {
     .pic_b {
         width: 8.2%;
         position: absolute;
-        top: 42.2%;
+        top: 40.2%;
         left: 50%;
         margin-left: -4.1%;
     }
@@ -1156,14 +1149,14 @@ img {
         position: absolute;
         left: 50%;
         margin-left: -30.4%;
-        top: 52%;
+        top: 49%;
     }
     .pic_e {
         width: 38.1%;
         position: absolute;
         left: 50%;
         margin-left: -19%;
-        top: 60%;
+        top: 56%;
     }
     .pic_f {
         width: 13%;
@@ -1177,6 +1170,23 @@ img {
         top: 55%;
         right: 10%;
     }
+}
+
+// 加入我们
+.join-boxaa {
+    width: 100%;
+    max-width: 750px;
+    height: 100%;
+    position: relative;
+    margin: auto;
+    background-image: url('../images/webbg.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    .page-night{
+        background-position: center 15%;
+    }
+    
 }
 
 .backbox {
