--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,11 @@ img {
 .linkbtnbox {
   position: relative;
 }
+.linkbtnbox a {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
 .about-box {
   width: 100%;
   max-width: 750px;
@@ -1049,24 +1054,13 @@ img {
   width: 79.7%;
   margin-top: 23%;
 }
-.join-boxaa {
-  width: 100%;
-  max-width: 750px;
-  height: 100%;
-  position: relative;
-  margin: auto;
-  background-image: url('../images/webbg.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  overflow: hidden;
-}
 .page-night {
-  width: 94%;
-  height: 90%;
+  width: 98%;
+  height: 100%;
   background: url('../images/joinbg.png');
   background-repeat: no-repeat;
   background-size: 100%;
-  background-position: center 16px;
+  background-position: center 35%;
   position: relative;
   overflow: hidden;
   margin: auto;
@@ -1082,7 +1076,7 @@ img {
 .page-night .pic_b {
   width: 8.2%;
   position: absolute;
-  top: 42.2%;
+  top: 40.2%;
   left: 50%;
   margin-left: -4.1%;
 }
@@ -1099,14 +1093,14 @@ img {
   position: absolute;
   left: 50%;
   margin-left: -30.4%;
-  top: 52%;
+  top: 49%;
 }
 .page-night .pic_e {
   width: 38.1%;
   position: absolute;
   left: 50%;
   margin-left: -19%;
-  top: 60%;
+  top: 56%;
 }
 .page-night .pic_f {
   width: 13%;
@@ -1119,6 +1113,20 @@ img {
   position: absolute;
   top: 55%;
   right: 10%;
+}
+.join-boxaa {
+  width: 100%;
+  max-width: 750px;
+  height: 100%;
+  position: relative;
+  margin: auto;
+  background-image: url('../images/webbg.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: hidden;
+}
+.join-boxaa .page-night {
+  background-position: center 15%;
 }
 .backbox {
   display: inline-block;
